--- a/CleanGuruApp/CleanGuruApp/Views/Appointment/CreateAppointment.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Appointment/CreateAppointment.cshtml
@@ -71,10 +71,9 @@
     </div>
     <div>
         <select asp-for="CustSub.Periodicity" id="Period">
-            @*CAN NOT create a asp-for="" Different @model   ??????*@
             <option value="7">Weekly</option>
-            <option value="14">Bi-Weekly</option>             @*CAN NOT create a asp-for="" Different @model   ??????*@
-            <option value="30">Monthly</option>             @*CAN NOT create a asp-for="" Different @model   ??????*@
+            <option value="14">Bi-Weekly</option>       
+            <option value="30">Monthly</option>          
         </select>
     </div>
     <div class="form-group">
@@ -83,11 +82,6 @@
             <input asp-for="CustSub.FinishDate" class="form-control" type="date" id="FinDateInp" value="@ViewBag.finDate">
         </div>
     </div>
-
-    @*<div class="form-group">
-            <label asp-for="CleanerRate" id="RateLab">Rate for test - Delete later</label>
-            <input asp-for="CleanerRate" id="RateInp" class="form-control" />
-        </div>*@
     <button asp-controller="Appointment" asp-action="CreateAppointment"
             class="btn btn-outline-success my-2 my-sm-0" type="submit">
         Save
